Fix play button bug on small landscape phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1863,8 +1863,8 @@ td > i {
   }
 }
 
-/* Mobile Devices (max-width 767px) */
-@media (max-width: 767px) {
+/* Mobile Devices (max-width 600px) */
+@media (max-width: 600px) {
   /* MOBILE DEVICE ALERT */
   #alert-container {
     position: relative;
@@ -2214,12 +2214,6 @@ td > i {
     bottom: 10px;
   }
 
-  #defeat {
-    background-color: #12172d;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-
   #defeat-buttons-container {
     margin-top: 60px;
     display: flex;
@@ -2233,12 +2227,6 @@ td > i {
     font-size: 13px;
     padding: 0;
     margin-bottom: 5px;
-  }
-
-  #empty-deck {
-    background-color: #12172d;
-    background-size: contain;
-    background-repeat: no-repeat;
   }
 
   #empty-deck > h2 {
@@ -2511,19 +2499,20 @@ td > i {
 /* Small horizontal phones (max height 350px) */
 @media (max-height: 350px) {
   /* HOMEPAGE */
+  /* HOMEPAGE */
   #play-button-container {
-    left: 25%;
-    transform: translate(-60%);
+    left: 35%;
+    transform: translate(-63%);
   }
 
   #play-button {
-    height: 40px;
-    width: 100px;
-    font-size: 15px;
+    height: 55px;
+    width: 120px;
+    font-size: 19px;
   }
 
   #play-button:hover {
-    font-size: 20px;
+    font-size: 28px;
   }
 
   #user-buttons {
@@ -2891,6 +2880,7 @@ td > i {
 
   #user-buttons > ul {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
@@ -2909,6 +2899,7 @@ td > i {
 
   #user-villain-buttons > ul {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
@@ -3053,5 +3044,257 @@ td > i {
 
   #villain-stats {
     font-size: 75%;
+  }
+}
+
+/* Small Landscape Phones */
+@media (max-width: 700px) and (max-height: 400px) {
+
+  /* HOMEPAGE */
+  #play-button-container {
+    left: 35%;
+    transform: translate(-63%);
+  }
+
+  #play-button {
+    height: 55px;
+    width: 120px;
+    font-size: 19px;
+  }
+
+  #play-button:hover {
+    font-size: 21px;
+  }
+
+  /* Page Buttons */
+  #page-buttons {
+    height: 140px;
+  }
+
+  #home-arrow {
+    height: 33px;
+    width: 48px;
+  }
+
+  #home-arrow:hover {
+    height: 35px;
+    width: 52px;
+  }
+
+  #help-button {
+    height: 33px;
+    width: 33px;
+  }
+
+  #help-button:hover {
+    height: 36px;
+    width: 36px;
+  }
+
+  #sfx-button-on {
+    height: 36px;
+    width: 36px;
+  }
+
+  #sfx-button-off {
+    height: 36px;
+    width: 36px;
+  }
+
+  #sfx-button-on:hover {
+    height: 40px;
+    width: 40px;
+  }
+
+  #sfx-button-off {
+    height: 40px;
+    width: 40px;
+  }
+
+  /* ----------------- User & CPU Cards */
+  #user-card {
+    height: 82%;
+    width: 24%;
+    left: 75px;
+  }
+
+  #cpu-card {
+    height: 82%;
+    width: 24%;
+    right: 75px;
+  }
+
+  /* ----------------- Hero Cards */
+  #hero img {
+    width: 72%;
+    height: 125px;
+  }
+
+  #hero > h3 {
+    font-size: 12px;
+  }
+
+  #hero > h4 {
+    font-size: 7px;
+    margin-bottom: 5px;
+  }
+
+  #hero-stats {
+    font-size: 7px;
+  }
+  
+  .skill {
+    padding-right: 50px;
+  }
+
+  /* ----------------- Villain Card */
+  #villain img {
+    width: 72%;
+    height: 125px;
+  }
+
+  #villain > h3 {
+    font-size: 12px;
+  }
+
+  #villain > h4 {
+    font-size: 7px;
+    margin-bottom: 5px;
+  }
+
+  #villain-stats {
+    font-size: 7px;
+  }
+
+  /* ----------------- Background Cards */
+  #user-background-card1 {
+    height: 82%;
+    width: 24%;
+    left: 60px;
+  }
+
+  #user-background-card2 {
+    height: 82%;
+    width: 24%;
+    left: 65px;
+  }
+
+  #user-background-card3 {
+    height: 82%;
+    width: 24%;
+    left: 70px;
+  }
+
+  #cpu-background-card1 {
+    height: 82%;
+    width: 24%;
+    right: 60px;
+  }
+
+  #cpu-background-card2 {
+    height: 82%;
+    width: 24%;
+    right: 65px;
+  }
+
+  #cpu-background-card3 {
+    height: 82%;
+    width: 24%;
+    right: 70px;
+  }
+
+   /* ----------------- User Buttons */
+   #user-buttons {
+    top: 90%;
+    left: 75px;
+    width: 23%;
+    height: 30px;
+  }
+
+  #user-buttons > ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 10px;
+  }
+
+  #user-buttons button {
+    font-size: 14px;
+  }
+
+  #user-villain-buttons {
+    top: 90%;
+    left: 75px;
+    width: 23%;
+    height: 30px;
+  }
+
+  #user-villain-buttons > ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 10px;
+  }
+
+  #user-villain-buttons button {
+    font-size: 14px;
+  }
+
+  /* ----------------- Score Board */
+  #score-board {
+    width: 25%;
+    height: 30%;
+    font-size: 15px;
+  }
+
+  #round-counter {
+    line-height: 15px;
+  }
+
+  #user-display-score,
+  #cpu-display-score {
+    font-size: 30px;
+  }
+
+  /* ----------------- Results */
+  #results-screen {
+    left: 0;
+    width: 25%;
+    height: 100px;
+  }
+
+  #results-screen h2 {
+    margin: 0;
+    font-size: 20px;
+  }
+
+  #win button {
+    font-size: 12px;
+  }
+
+  #draw button {
+    font-size: 12px;
+  }
+
+  #lose button {
+    font-size: 12px;
+  }
+
+   /* ----------------- Deal Cards */
+   #deal-button-box {
+    left: 0;
+    width: 150px;
+    height: 150px;
+  }
+
+  #deal-button-box h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  #deal-cards-button {
+    height: 75px;
+    width: 75px;
+    font-size: 22px;
   }
 }
